# lila_startup

./: .env  .env.example  .gitignore  Lila.blueprint.json  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  vite.config.ts
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/lila_workflow/: __init__.py  audio.py  cli.py  database.py  metrics.py  models.py  report.py  server.py  settings.py  workflow.py
src/: App.tsx  index.css
src/components/: ProtectedRoute.tsx
src/components/analysis/: AnalysisProcessingScreen.tsx  AnalysisReportViewer.tsx  AnalysisResultPreview.tsx  AssessmentCharts.tsx  WebhookReportViewer.tsx
src/components/bridge/: AppShell.tsx  SharedComponents.tsx
src/components/mascots/: Blobby.tsx  Tangerine.tsx  (+1 more)
src/contexts/: AnalysisContext.tsx  AuthContext.tsx  SoundContext.tsx
src/data/: mockData.ts
src/lib/: lilaBackend.ts
src/pages/: CreateSessionPage.tsx  DashboardPage.tsx  LandingPage.tsx  LiveMonitorPage.tsx  LoginPage.tsx  NotFound.tsx  PrivacyPage.tsx  SettingsPage.tsx  SummaryPage.tsx  TrendsPage.tsx  UploadAudioPage.tsx  VoiceRoomPage.tsx
supabase/: config.toml
supabase/migrations/: 20260411154231_8f5deefe-c646-4048-a04b-214cbe221068.sql  20260411162133_8095fcff-e7bf-41ef-aa17-fd49d9673409.sql  20260411165055_45e0962d-eeab-438d-a711-41af15794ee9.sql  20260411165506_358281e1-d899-47ac-89f4-75009210d640.sql  20260411230229_a2f3c39a-2b3b-46a6-8f9c-da2c506c09ae.sql  20260411235930_39edaec3-4d62-460b-83aa-5ea0e870b996.sql  20260620223000_lila_persistent_analysis.sql
(+2 files in other folders)
